--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <canvas id="confetti"></canvas>
     <script src="script.js"></script>
     <script src="confetti.js"></script>
+      <div id="popup" class="popup hidden">
+    <div class="popup-content">
+      🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
+    </div>
   </body>
 </html>
