--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <div class="popup-content">
       🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
     </div>
+          </div>
+
+  <script src="script.js"></script>
   </body>
 </html>
