--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HBD Cake</title>
+    <title>met ultah sayang</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Selamat Ulang Tahun Sayang ❤️</h1>
+      <h1>Don't forget to make a wish ❤️</h1>
       <p class="instruction">Tiup lilinnya lewat mic ya 😘🎂</p>
       <canvas id="cake"></canvas>
-    </div>
     <canvas id="confetti"></canvas>
     <script src="script.js"></script>
     <script src="confetti.js"></script>
@@ -19,8 +18,6 @@
     <div class="popup-content">
       🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
     </div>
-          </div>
-
   <script src="script.js"></script>
   </body>
 </html>
