--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <canvas id="confetti"></canvas>
     <script src="script.js"></script>
     <script src="confetti.js"></script>
+       <div id="popup" class="popup hidden">
+    <div class="popup-content">
+      🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
     </div>
   <script src="script.js"></script>
   </body>
