--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="popup-content">
       🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
     </div>
+         <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
   </body>
 </html>
