--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <div class="container">
       <h1>Don't forget to make a wish ❤️</h1>
       <p class="instruction">Tiup lilinnya lewat mic ya 😘🎂</p>
-      <canvas id="cake"></canvas>
+       <div class="cake">
+      <div class="plate"></div>
+      <div class="layer layer-bottom"></div>
+      <div class="layer layer-middle"></div>
+      <div class="layer layer-top"></div>
+      <div class="icing"></div>
+      <div class="drip drip1"></div>
+      <div class="drip drip2"></div>
+      <div class="drip drip3"></div>
+         <div class="candle">
     <canvas id="confetti"></canvas>
     <script src="script.js"></script>
     <script src="confetti.js"></script>
