--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Don't forget to make a wish ❤️</h1>
       <p class="instruction">Tiup lilinnya lewat mic ya 😘🎂</p>
     <canvas id="cake"></canvas>
+    <script src="script.js"></script>
     <canvas id="confetti"></canvas>
     <script src="script.js"></script>
     <script src="confetti.js"></script>
