--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <title>met ultah sayang</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="container">
-      <h1>Don't forget to make a wish ❤️</h1>
-      <p class="instruction">Tiup lilinnya lewat mic ya 😘🎂</p>
+ <body>
+  <div class="container">
+    <h1>Don't forget to make a wish ❤️</h1>
+    <p class="instruction">Tiup lilinnya lewat mic ya 😘🎂</p>
+    
     <canvas id="cake"></canvas>
-    <script src="script.js"></script>
     <canvas id="confetti"></canvas>
-    <script src="script.js"></script>
-    <script src="confetti.js"></script>
-       <div id="popup" class="popup hidden">
-    <div class="popup-content">
-      🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
-    <link rel="stylesheet" href="style.css" />
+
+    <div id="popup" class="popup hidden">
+      <div class="popup-content">
+        🎉 Selamat Ulang Tahun yang ke-34 Sayang 🎉
+      </div>
+    </div>
+  </div>
+
   <script src="script.js"></script>
-  </body>
+  <script src="confetti.js"></script>
+</body>
 </html>
