--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       ~nisa
     </div>
   </div>
+
+   <div id="banner" class="banner hidden">🎉 Happy Birthday! 🎉</div>
+
+  <!-- Musik & suara efek -->
+  <audio id="bgMusic" src="happy_birthday.mp3" loop></audio>
+  <audio id="blowSound" src="blow.mp3"></audio>
+  <audio id="confettiSound" src="pop.mp3"></audio>
   
   <script src="script.js"></script>
 </body>
